k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: devops-tracker-api
  namespace: devops-tracker
  labels:
    app: devops-tracker-api

spec:
  replicas: 2

  revisionHistoryLimit: 5

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%

  selector:
    matchLabels:
      app: devops-tracker-api

  template:
    metadata:
      labels:
        app: devops-tracker-api

    spec:
      containers:
        - name: api
          image: devopstrackerdevvsh6qw.azurecr.io/devops-tracker:832b0f6
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 3000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
