k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-tracker
  namespace: devops-tracker

spec:
  ingressClassName: nginx

  rules:
    - host: devops-tracker.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-tracker
                port:
                  number: 80
